--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,11 @@
-cmake_minimum_required(VERSION 3.1)
-project(moonlight-embedded VERSION 2.6.2 LANGUAGES C)
+cmake_minimum_required(VERSION 3.6)
+project(moonlight-embedded VERSION 2.7.0 LANGUAGES C)
 SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
 SET(CMAKE_C_STANDARD 99)
 include(${CMAKE_ROOT}/Modules/GNUInstallDirs.cmake)
 include(${CMAKE_SOURCE_DIR}/cmake/generate_version_header.cmake)
+
+include(CheckCSourceCompiles)
 
 add_compile_options(-Wall -Wextra -Wno-unused-parameter -Wno-pointer-sign -Wno-sign-compare -Wno-switch)
 
@@ -98,6 +100,17 @@ if (CMAKE_SYSTEM_NAME MATCHES "FreeBSD")
   target_sources(moonlight PRIVATE ./src/audio/oss.c)
 endif()
 
+check_c_source_compiles("#include <sys/auxv.h>
+                         int main(void) { return getauxval(AT_HWCAP); }" HAVE_GETAUXVAL)
+if (HAVE_GETAUXVAL)
+  list(APPEND MOONLIGHT_DEFINITIONS HAVE_GETAUXVAL)
+endif()
+
+check_c_source_compiles("int main(void) { return __builtin_cpu_supports(\"aes\"); }" HAVE_BICS_AES)
+if (HAVE_BICS_AES)
+  list(APPEND MOONLIGHT_DEFINITIONS HAVE_BICS_AES)
+endif()
+
 if (CEC_FOUND)
   list(APPEND MOONLIGHT_DEFINITIONS HAVE_LIBCEC)
   list(APPEND MOONLIGHT_OPTIONS CEC)
@@ -109,7 +122,7 @@ endif()
 if(AMLOGIC_FOUND)
   list(APPEND MOONLIGHT_DEFINITIONS HAVE_AML)
   list(APPEND MOONLIGHT_OPTIONS AML)
-  add_library(moonlight-aml SHARED ./src/video/aml.c ${ILCLIENT_SRC_LIST})
+  add_library(moonlight-aml SHARED ./src/video/aml.c ./src/util.c ${ILCLIENT_SRC_LIST})
   target_include_directories(moonlight-aml PRIVATE ${AMLOGIC_INCLUDE_DIRS} ${GAMESTREAM_INCLUDE_DIR} ${MOONLIGHT_COMMON_INCLUDE_DIR})
   target_link_libraries(moonlight-aml gamestream ${AMLOGIC_LIBRARIES})
   set_property(TARGET moonlight-aml PROPERTY COMPILE_DEFINITIONS ${AMLOGIC_DEFINITIONS})
@@ -120,7 +133,7 @@ if(BROADCOM-OMX_FOUND)
   list(APPEND MOONLIGHT_DEFINITIONS HAVE_PI)
   list(APPEND MOONLIGHT_OPTIONS PI)
   aux_source_directory(./third_party/ilclient ILCLIENT_SRC_LIST)
-  add_library(moonlight-pi SHARED ./src/video/pi.c ./src/audio/omx.c ${ILCLIENT_SRC_LIST})
+  add_library(moonlight-pi SHARED ./src/video/pi.c ./src/audio/omx.c ./src/util.c ${ILCLIENT_SRC_LIST})
   target_include_directories(moonlight-pi PRIVATE ./third_party/ilclient ${BROADCOM_INCLUDE_DIRS} ${GAMESTREAM_INCLUDE_DIR} ${MOONLIGHT_COMMON_INCLUDE_DIR} ${OPUS_INCLUDE_DIRS})
   target_link_libraries(moonlight-pi gamestream ${BROADCOM_OMX_LIBRARIES} ${OPUS_LIBRARY})
   set_property(TARGET moonlight-pi PROPERTY COMPILE_DEFINITIONS ${BROADCOM_OMX_DEFINITIONS})
@@ -130,7 +143,7 @@ endif()
 if(MMAL_FOUND)
   list(APPEND MOONLIGHT_DEFINITIONS HAVE_MMAL)
   list(APPEND MOONLIGHT_OPTIONS MMAL)
-  add_library(moonlight-mmal SHARED ./src/video/mmal.c)
+  add_library(moonlight-mmal SHARED ./src/video/mmal.c ./src/util.c)
   target_include_directories(moonlight-mmal PRIVATE ${MMAL_INCLUDE_DIRS} ${GAMESTREAM_INCLUDE_DIR} ${MOONLIGHT_COMMON_INCLUDE_DIR})
   target_link_libraries(moonlight-mmal gamestream ${MMAL_LINK_LIBRARIES})
   install(TARGETS moonlight-mmal DESTINATION ${CMAKE_INSTALL_LIBDIR})
@@ -139,7 +152,7 @@ endif()
 if(FREESCALE_FOUND)
   list(APPEND MOONLIGHT_DEFINITIONS HAVE_IMX)
   list(APPEND MOONLIGHT_OPTIONS IMX)
-  add_library(moonlight-imx SHARED ./src/video/imx.c ./src/video/imx_vpu.c)
+  add_library(moonlight-imx SHARED ./src/video/imx.c ./src/video/imx_vpu.c ./src/util.c)
   target_include_directories(moonlight-imx PRIVATE ${FREESCALE_INCLUDE_DIRS} ${GAMESTREAM_INCLUDE_DIR} ${MOONLIGHT_COMMON_INCLUDE_DIR})
   target_link_libraries(moonlight-imx gamestream ${FREESCALE_LIBRARIES})
   install(TARGETS moonlight-imx DESTINATION ${CMAKE_INSTALL_LIBDIR})
@@ -148,7 +161,7 @@ endif()
 if(ROCKCHIP_FOUND)
   list(APPEND MOONLIGHT_DEFINITIONS HAVE_ROCKCHIP)
   list(APPEND MOONLIGHT_OPTIONS ROCKCHIP)
-  add_library(moonlight-rk SHARED ./src/video/rk.c)
+  add_library(moonlight-rk SHARED ./src/video/rk.c ./src/util.c)
   target_include_directories(moonlight-rk PRIVATE ${ROCKCHIP_INCLUDE_DIRS} ${GAMESTREAM_INCLUDE_DIR} ${MOONLIGHT_COMMON_INCLUDE_DIR})
   target_link_libraries(moonlight-rk gamestream ${ROCKCHIP_LIBRARIES})
   set_property(TARGET moonlight-rk PROPERTY COMPILE_DEFINITIONS ${ROCKCHIP_DEFINITIONS})
@@ -178,11 +191,14 @@ if (SOFTWARE_FOUND)
     list(APPEND MOONLIGHT_OPTIONS WAYLAND)
     find_path(WAYLAND_SCANNER_PATH wayland-scanner PATHS ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_BINDIR} REQUIRED)
     find_path(XDG_SHELL_PATH xdg-shell.xml PATHS ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_DATADIR}/wayland-protocols/stable/xdg-shell REQUIRED)
+    find_path(VIEWPORTER_PATH viewporter.xml PATHS ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_DATADIR}/wayland-protocols/stable/viewporter REQUIRED)
     execute_process(COMMAND ${WAYLAND_SCANNER_PATH}/wayland-scanner client-header ${XDG_SHELL_PATH}/xdg-shell.xml ./src/video/xdg-shell-client-protocol.h
                    COMMAND ${WAYLAND_SCANNER_PATH}/wayland-scanner private-code ${XDG_SHELL_PATH}/xdg-shell.xml ./src/video/xdg-shell-client-protocol.c
+                   COMMAND ${WAYLAND_SCANNER_PATH}/wayland-scanner client-header ${VIEWPORTER_PATH}/viewporter.xml ./src/video/wp-viewporter.h
+                   COMMAND ${WAYLAND_SCANNER_PATH}/wayland-scanner private-code ${VIEWPORTER_PATH}/viewporter.xml ./src/video/wp-viewporter.c
                    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
                    TIMEOUT 9)
-    target_sources(moonlight PRIVATE ./src/video/xdg-shell-client-protocol.c ./src/video/wayland.c)
+    target_sources(moonlight PRIVATE ./src/video/wlr-output-management.c ./src/video/wp-viewporter.c ./src/video/xdg-shell-client-protocol.c ./src/video/wayland.c)
     target_include_directories(moonlight PRIVATE ${WAYLAND_CLIENT_INCLUDE_DIRS} ${WAYLAND_EGL_INCLUDE_DIRS})
     target_link_libraries(moonlight ${WAYLAND_CLIENT_LIBRARIES} ${WAYLAND_EGL_LIBRARIES})
   endif()
