rewrite vaapi and x11 platform render and some fix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.6)
-project(moonlight-embedded VERSION 2.7.2 LANGUAGES C)
+project(moonlight-embedded VERSION 2.7.3 LANGUAGES C)
 SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
 SET(CMAKE_C_STANDARD 99)
 include(${CMAKE_ROOT}/Modules/GNUInstallDirs.cmake)
@@ -27,6 +27,8 @@ option(ENABLE_SDL "Compile SDL support" ON)
 option(ENABLE_FFMPEG "Compile FFMPEG support" ON)
 option(ENABLE_X11 "Compile X11 support (requires ENABLE_FFMPEG)" ON)
 option(ENABLE_WAYLAND "Compile WAYLAND support (requires ENABLE_FFMPEG)" ON)
+option(ENABLE_GBM "Compile GBM support (requires ENABLE_FFMPEG)" ON)
+option(ENABLE_DRM "Compile DRM support (requires ENABLE_FFMPEG)" OFF)
 option(ENABLE_CEC "Compile CEC support" ON)
 option(ENABLE_PULSE "Compile PulseAudio support" ON)
 
@@ -38,7 +40,6 @@ endif()
 if (ENABLE_FFMPEG)
   pkg_check_modules(AVCODEC libavcodec)
   pkg_check_modules(AVUTIL libavutil)
-  pkg_check_modules(VDPAU vdpau)
   pkg_check_modules(LIBVA libva)
   pkg_check_modules(EGL egl)
   pkg_check_modules(GLES glesv2)
@@ -51,6 +52,13 @@ if (ENABLE_FFMPEG)
   if (ENABLE_WAYLAND)
     pkg_check_modules(WAYLAND_CLIENT wayland-client)
     pkg_check_modules(WAYLAND_EGL wayland-egl)
+    pkg_check_modules(LIBVA_DRM libva-drm)
+  endif()
+
+  if (ENABLE_GBM)
+    pkg_check_modules(GBM gbm)
+    pkg_check_modules(LIBDRM libdrm)
+    pkg_check_modules(LIBVA_DRM libva-drm)
   endif()
 endif()
 if (ENABLE_PULSE)
@@ -65,16 +73,12 @@ if (NOT MMAL_FOUND)
   find_package(MMAL)
 endif()
 
-set(VDPAU_ACCEL_FOUND FALSE)
 set(VA_ACCEL_FOUND FALSE)
 set(SOFTWARE_FOUND FALSE)
 
 if(AVCODEC_FOUND AND AVUTIL_FOUND)
   if(EGL_FOUND AND GLES_FOUND AND XLIB_FOUND)
     set(X11_FOUND TRUE)
-    if(VDPAU_FOUND)
-      set(VDPAU_ACCEL_FOUND TRUE)
-    endif()
     if (LIBVA_FOUND AND LIBVA_X11_FOUND)
       set(VA_ACCEL_FOUND TRUE)
     endif()
@@ -179,12 +183,19 @@ if (SOFTWARE_FOUND)
     target_include_directories(moonlight PRIVATE ${SDL_INCLUDE_DIRS})
     target_link_libraries(moonlight ${SDL_LIBRARIES})
   endif()
+  if(GBM_FOUND)
+    list(APPEND MOONLIGHT_DEFINITIONS HAVE_GBM)
+    list(APPEND MOONLIGHT_OPTIONS GBM)
+    target_sources(moonlight PRIVATE ./src/video/gbm.c ./src/video/drm_base.c)
+    target_include_directories(moonlight PRIVATE ${GBM_INCLUDE_DIRS} ${LIBDRM_INCLUDE_DIRS})
+    target_link_libraries(moonlight ${GBM_LIBRARIES} ${LIBDRM_LIBRARIES} ${LIBYUV_LIBRARIES})
+  endif()
   if(X11_FOUND)
     list(APPEND MOONLIGHT_DEFINITIONS HAVE_X11)
     list(APPEND MOONLIGHT_OPTIONS X11)
-    target_sources(moonlight PRIVATE ./src/video/x11.c ./src/video/egl.c ./src/input/x11.c)
-    target_include_directories(moonlight PRIVATE ${XLIB_INCLUDE_DIRS} ${EGL_INCLUDE_DIRS} ${GLES_INCLUDE_DIRS})
-    target_link_libraries(moonlight ${XLIB_LIBRARIES} ${EGL_LIBRARIES} ${GLES_LIBRARIES})
+    target_sources(moonlight PRIVATE ./src/video/x11.c ./src/input/x11.c)
+    target_include_directories(moonlight PRIVATE ${XLIB_INCLUDE_DIRS})
+    target_link_libraries(moonlight ${XLIB_LIBRARIES})
   endif()
   if(WAYLAND_CLIENT_FOUND AND WAYLAND_EGL_FOUND)
     list(APPEND MOONLIGHT_DEFINITIONS HAVE_WAYLAND)
@@ -202,21 +213,17 @@ if (SOFTWARE_FOUND)
     target_include_directories(moonlight PRIVATE ${WAYLAND_CLIENT_INCLUDE_DIRS} ${WAYLAND_EGL_INCLUDE_DIRS})
     target_link_libraries(moonlight ${WAYLAND_CLIENT_LIBRARIES} ${WAYLAND_EGL_LIBRARIES})
   endif()
-  if((X11_FOUND) OR (WAYLAND_CLIENT_FOUND AND WAYLAND_EGL_FOUND))
-    target_sources(moonlight PRIVATE ./src/video/pc.c)
-  endif()
-  if(VDPAU_ACCEL_FOUND)
-    list(APPEND MOONLIGHT_DEFINITIONS HAVE_VDPAU)
-    list(APPEND MOONLIGHT_OPTIONS VDPAU)
-    target_include_directories(moonlight PRIVATE ${VDPAU_INCLUDE_DIRS})
-    target_link_libraries(moonlight ${VDPAU_LIBRARIES})
+  if((X11_FOUND) OR (WAYLAND_CLIENT_FOUND AND WAYLAND_EGL_FOUND) OR (GBM_FOUND))
+    target_sources(moonlight PRIVATE ./src/video/pc.c ./src/video/egl.c)
+    target_include_directories(moonlight PRIVATE ${EGL_INCLUDE_DIRS} ${GLES_INCLUDE_DIRS})
+    target_link_libraries(moonlight ${EGL_LIBRARIES} ${GLES_LIBRARIES})
   endif()
   if(VA_ACCEL_FOUND)
     list(APPEND MOONLIGHT_DEFINITIONS HAVE_VAAPI)
     list(APPEND MOONLIGHT_OPTIONS VAAPI)
     target_sources(moonlight PRIVATE ./src/video/ffmpeg_vaapi.c)
-    target_include_directories(moonlight PRIVATE ${LIBVA_INCLUDE_DIRS} ${LIBVA_X11_INCLUDE_DIRS})
-    target_link_libraries(moonlight ${LIBVA_LIBRARIES} ${LIBVA_X11_LIBRARIES})
+    target_include_directories(moonlight PRIVATE ${LIBVA_INCLUDE_DIRS} ${LIBVA_X11_INCLUDE_DIRS} ${LIBVA_DRM_INCLUDE_DIRS})
+    target_link_libraries(moonlight ${LIBVA_LIBRARIES} ${LIBVA_X11_LIBRARIES} ${LIBVA_DRM_LIBRARIES})
   endif()
 endif()
 
