fix bug that so much low timeout time

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -188,7 +188,7 @@ if (SOFTWARE_FOUND)
     list(APPEND MOONLIGHT_OPTIONS GBM)
     target_sources(moonlight PRIVATE ./src/video/gbm.c ./src/video/drm_base.c)
     target_include_directories(moonlight PRIVATE ${GBM_INCLUDE_DIRS} ${LIBDRM_INCLUDE_DIRS})
-    target_link_libraries(moonlight ${GBM_LIBRARIES} ${LIBDRM_LIBRARIES} ${LIBYUV_LIBRARIES})
+    target_link_libraries(moonlight ${GBM_LIBRARIES} ${LIBDRM_LIBRARIES})
   endif()
   if(X11_FOUND)
     list(APPEND MOONLIGHT_DEFINITIONS HAVE_X11)
