--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.6)
-project(moonlight-embedded VERSION 2.7.3 LANGUAGES C)
+project(moonlight-embedded VERSION 2.7.4 LANGUAGES C)
 SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
 SET(CMAKE_C_STANDARD 99)
 include(${CMAKE_ROOT}/Modules/GNUInstallDirs.cmake)
@@ -40,6 +40,7 @@ endif()
 if (ENABLE_FFMPEG)
   pkg_check_modules(AVCODEC libavcodec)
   pkg_check_modules(AVUTIL libavutil)
+  pkg_check_modules(SWSCALE libswscale)
   pkg_check_modules(LIBVA libva)
   pkg_check_modules(EGL egl)
   pkg_check_modules(GLES glesv2)
@@ -76,7 +77,7 @@ endif()
 set(VA_ACCEL_FOUND FALSE)
 set(SOFTWARE_FOUND FALSE)
 
-if(AVCODEC_FOUND AND AVUTIL_FOUND)
+if(AVCODEC_FOUND AND AVUTIL_FOUND AND SWSCALE_FOUND)
   if(EGL_FOUND AND GLES_FOUND AND XLIB_FOUND)
     set(X11_FOUND TRUE)
     if (LIBVA_FOUND AND LIBVA_X11_FOUND)
@@ -173,9 +174,9 @@ if(ROCKCHIP_FOUND)
 endif()
 
 if (SOFTWARE_FOUND)
-  target_sources(moonlight PRIVATE ./src/video/ffmpeg.c)
-  target_include_directories(moonlight PRIVATE ${AVCODEC_INCLUDE_DIRS} ${AVUTIL_INCLUDE_DIRS})
-  target_link_libraries(moonlight ${AVCODEC_LIBRARIES} ${AVUTIL_LIBRARIES})
+  target_sources(moonlight PRIVATE ./src/video/ffmpeg.c ./src/video/sws.c)
+  target_include_directories(moonlight PRIVATE ${AVCODEC_INCLUDE_DIRS} ${AVUTIL_INCLUDE_DIRS} ${SWSCALE_INCLUDE_DIRS})
+  target_link_libraries(moonlight ${AVCODEC_LIBRARIES} ${AVUTIL_LIBRARIES} ${SWSCALE_LIBRARIES})
   if(SDL_FOUND)
     list(APPEND MOONLIGHT_DEFINITIONS HAVE_SDL)
     list(APPEND MOONLIGHT_OPTIONS SDL)
