--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
-project(moonlight-embedded VERSION 2.7.5 LANGUAGES C)
+project(moonlight-embedded VERSION 2.7.6 LANGUAGES C)
 SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
 SET(CMAKE_C_STANDARD 99)
 include(${CMAKE_ROOT}/Modules/GNUInstallDirs.cmake)
@@ -27,20 +27,24 @@ option(ENABLE_SDL "Compile SDL support" ON)
 option(ENABLE_FFMPEG "Compile FFMPEG support" ON)
 option(ENABLE_X11 "Compile X11 support (requires ENABLE_FFMPEG)" ON)
 option(ENABLE_WAYLAND "Compile WAYLAND support (requires ENABLE_FFMPEG)" ON)
-option(ENABLE_GBM "Compile GBM support (requires ENABLE_FFMPEG)" ON)
-option(ENABLE_DRM "Compile DRM support (requires ENABLE_FFMPEG)" OFF)
+option(ENABLE_DRM "Compile DRM support (requires ENABLE_FFMPEG)" ON)
 option(ENABLE_CEC "Compile CEC support" ON)
 option(ENABLE_PULSE "Compile PulseAudio support" ON)
+option(ENABLE_YUV "Compile yuv format convert support" ON)
 
 pkg_check_modules(EVDEV REQUIRED libevdev)
 pkg_check_modules(UDEV REQUIRED libudev)
 if (ENABLE_SDL)
-  pkg_check_modules(SDL sdl2>=2.0.4)
+  pkg_check_modules(SDL sdl3)
 endif()
 if (ENABLE_FFMPEG)
   pkg_check_modules(AVCODEC libavcodec)
   pkg_check_modules(AVUTIL libavutil)
-  pkg_check_modules(SWSCALE libswscale)
+  if(NOT ENABLE_YUV)
+    pkg_check_modules(SWSCALE libswscale)
+  else()
+    pkg_check_modules(LIBYUV libyuv)
+  endif()
   pkg_check_modules(LIBVA libva)
   pkg_check_modules(EGL egl)
   pkg_check_modules(GLES glesv2)
@@ -56,7 +60,7 @@ if (ENABLE_FFMPEG)
     pkg_check_modules(LIBVA_DRM libva-drm)
   endif()
 
-  if (ENABLE_GBM)
+  if (ENABLE_DRM)
     pkg_check_modules(GBM gbm)
     pkg_check_modules(LIBDRM libdrm)
     pkg_check_modules(LIBVA_DRM libva-drm)
@@ -77,14 +81,26 @@ endif()
 set(VA_ACCEL_FOUND FALSE)
 set(SOFTWARE_FOUND FALSE)
 
-if(AVCODEC_FOUND AND AVUTIL_FOUND AND SWSCALE_FOUND)
-  if(EGL_FOUND AND GLES_FOUND AND XLIB_FOUND)
-    set(X11_FOUND TRUE)
-    if (LIBVA_FOUND AND LIBVA_X11_FOUND)
+if(AVCODEC_FOUND AND AVUTIL_FOUND)
+  if (GBM_FOUND AND LIBDRM_FOUND)
+    set(DRM_FOUND TRUE)
+    if (DRM_FOUND AND LIBVA_DRM_FOUND)
       set(VA_ACCEL_FOUND TRUE)
     endif()
   endif()
-  if(SDL_FOUND OR X11_FOUND)
+
+  if(EGL_FOUND AND GLES_FOUND)
+    if (XLIB_FOUND)
+      set(X11_FOUND TRUE)
+    endif()
+    if (WAYLAND_CLIENT_FOUND AND WAYLAND_EGL_FOUND)
+      set(WAYLAND_FOUND TRUE)
+    endif()
+    if ((LIBVA_FOUND AND LIBVA_X11_FOUND) OR (WAYLAND_FOUND AND LIBVA_DRM_FOUND))
+      set(VA_ACCEL_FOUND TRUE)
+    endif()
+  endif()
+  if(SDL_FOUND OR X11_FOUND OR WAYLAND_FOUND OR DRM_FOUND)
     set(SOFTWARE_FOUND TRUE)
   endif()
 endif()
@@ -174,20 +190,27 @@ if(ROCKCHIP_FOUND)
 endif()
 
 if (SOFTWARE_FOUND)
-  target_sources(moonlight PRIVATE ./src/video/ffmpeg.c ./src/video/sws.c)
-  target_include_directories(moonlight PRIVATE ${AVCODEC_INCLUDE_DIRS} ${AVUTIL_INCLUDE_DIRS} ${SWSCALE_INCLUDE_DIRS})
-  target_link_libraries(moonlight ${AVCODEC_LIBRARIES} ${AVUTIL_LIBRARIES} ${SWSCALE_LIBRARIES})
+  target_sources(moonlight PRIVATE ./src/video/ffmpeg.c ./src/video/convert.c)
+  target_include_directories(moonlight PRIVATE ${AVCODEC_INCLUDE_DIRS} ${AVUTIL_INCLUDE_DIRS})
+  target_link_libraries(moonlight ${AVCODEC_LIBRARIES} ${AVUTIL_LIBRARIES})
+  if(NOT ENABLE_YUV)
+    target_include_directories(moonlight PRIVATE ${SWSCALE_INCLUDE_DIRS})
+    target_link_libraries(moonlight ${SWSCALE_LIBRARIES})
+  else()
+    list(APPEND MOONLIGHT_DEFINITIONS HAVE_LIBYUV)
+    target_include_directories(moonlight PRIVATE ${LIBYUV_INCLUDE_DIRS})
+    target_link_libraries(moonlight ${LIBYUV_LIBRARIES})
+  endif()
   if(SDL_FOUND)
     list(APPEND MOONLIGHT_DEFINITIONS HAVE_SDL)
     list(APPEND MOONLIGHT_OPTIONS SDL)
-    target_sources(moonlight PRIVATE ./src/video/sdl.c ./src/audio/sdl.c ./src/input/sdl.c)
     target_include_directories(moonlight PRIVATE ${SDL_INCLUDE_DIRS})
     target_link_libraries(moonlight ${SDL_LIBRARIES})
   endif()
-  if(GBM_FOUND)
-    list(APPEND MOONLIGHT_DEFINITIONS HAVE_GBM)
+  if(DRM_FOUND)
+    list(APPEND MOONLIGHT_DEFINITIONS HAVE_DRM)
     list(APPEND MOONLIGHT_OPTIONS GBM)
-    target_sources(moonlight PRIVATE ./src/video/gbm.c ./src/video/drm_base.c)
+    target_sources(moonlight PRIVATE ./src/video/gbm.c ./src/video/drm_base.c ./src/video/drm.c)
     target_include_directories(moonlight PRIVATE ${GBM_INCLUDE_DIRS} ${LIBDRM_INCLUDE_DIRS})
     target_link_libraries(moonlight ${GBM_LIBRARIES} ${LIBDRM_LIBRARIES})
   endif()
@@ -204,8 +227,16 @@ if (SOFTWARE_FOUND)
     find_path(WAYLAND_SCANNER_PATH wayland-scanner PATHS ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_BINDIR} REQUIRED)
     find_path(XDG_SHELL_PATH xdg-shell.xml PATHS ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_DATADIR}/wayland-protocols/stable/xdg-shell REQUIRED)
     find_path(VIEWPORTER_PATH viewporter.xml PATHS ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_DATADIR}/wayland-protocols/stable/viewporter REQUIRED)
-    find_path(POINTER_PATH pointer-constraints-unstable-v1.xml PATHS ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_DATADIR}/wayland-protocols/unstable/pointer-constraints REQUIRED)
-    find_path(RELATIVE_PATH relative-pointer-unstable-v1.xml PATHS ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_DATADIR}/wayland-protocols/unstable/relative-pointer REQUIRED)
+    find_path(LINUXDMABUF_PATH linux-dmabuf-v1.xml PATHS ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_DATADIR}/wayland-protocols/stable/linux-dmabuf REQUIRED)
+    find_path(POINTER_PATH pointer-constraints-unstable-v1.xml PATHS ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_DATADIR}/wayland-protocols
+              PATH_SUFFIXES unstable/pointer-constraints stable/pointer-constraints staging/pointer-constraints REQUIRED)
+    find_path(RELATIVE_PATH relative-pointer-unstable-v1.xml PATHS ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_DATADIR}/wayland-protocols
+              PATH_SUFFIXES unstable/relative-pointer stable/relative-pointer staging/relative-pointer REQUIRED)
+    find_path(COLORMANAGEMENT_PATH color-management-v1.xml PATHS ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_DATADIR}/wayland-protocols
+              PATH_SUFFIXES unstable/color-management stable/color-management staging/color-management REQUIRED)
+    find_path(COLORREPRESENTATION_PATH color-representation-v1.xml PATHS ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_DATADIR}/wayland-protocols
+              PATH_SUFFIXES unstable/color-representation stable/color-representation staging/color-representation REQUIRED)
+    find_path(RTIME_PATH presentation-time.xml PATHS ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_DATADIR}/wayland-protocols/stable/presentation-time REQUIRED)
     execute_process(COMMAND ${WAYLAND_SCANNER_PATH}/wayland-scanner client-header ${XDG_SHELL_PATH}/xdg-shell.xml ./src/video/xdg-shell-client-protocol.h
                    COMMAND ${WAYLAND_SCANNER_PATH}/wayland-scanner private-code ${XDG_SHELL_PATH}/xdg-shell.xml ./src/video/xdg-shell-client-protocol.c
                    COMMAND ${WAYLAND_SCANNER_PATH}/wayland-scanner client-header ${VIEWPORTER_PATH}/viewporter.xml ./src/video/wp-viewporter.h
@@ -214,13 +245,21 @@ if (SOFTWARE_FOUND)
                    COMMAND ${WAYLAND_SCANNER_PATH}/wayland-scanner private-code ${POINTER_PATH}/pointer-constraints-unstable-v1.xml ./src/video/zwp-pointer-constraints.c
                    COMMAND ${WAYLAND_SCANNER_PATH}/wayland-scanner client-header ${RELATIVE_PATH}/relative-pointer-unstable-v1.xml ./src/video/zwp-relative-pointer.h
                    COMMAND ${WAYLAND_SCANNER_PATH}/wayland-scanner private-code ${RELATIVE_PATH}/relative-pointer-unstable-v1.xml ./src/video/zwp-relative-pointer.c
+                   COMMAND ${WAYLAND_SCANNER_PATH}/wayland-scanner client-header ${LINUXDMABUF_PATH}/linux-dmabuf-v1.xml ./src/video/wp-linuxdmabuf.h
+                   COMMAND ${WAYLAND_SCANNER_PATH}/wayland-scanner private-code ${LINUXDMABUF_PATH}/linux-dmabuf-v1.xml ./src/video/wp-linuxdmabuf.c
+                   COMMAND ${WAYLAND_SCANNER_PATH}/wayland-scanner client-header ${COLORMANAGEMENT_PATH}/color-management-v1.xml ./src/video/wp-colormanagement.h
+                   COMMAND ${WAYLAND_SCANNER_PATH}/wayland-scanner private-code ${COLORMANAGEMENT_PATH}/color-management-v1.xml ./src/video/wp-colormanagement.c
+                   COMMAND ${WAYLAND_SCANNER_PATH}/wayland-scanner client-header ${COLORREPRESENTATION_PATH}/color-representation-v1.xml ./src/video/wp-representation.h
+                   COMMAND ${WAYLAND_SCANNER_PATH}/wayland-scanner private-code ${COLORREPRESENTATION_PATH}/color-representation-v1.xml ./src/video/wp-representation.c
+                   COMMAND ${WAYLAND_SCANNER_PATH}/wayland-scanner client-header ${RTIME_PATH}/presentation-time.xml ./src/video/wp-presentation-time.h
+                   COMMAND ${WAYLAND_SCANNER_PATH}/wayland-scanner private-code ${RTIME_PATH}/presentation-time.xml ./src/video/wp-presentation-time.c
                    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
                    TIMEOUT 9)
-    target_sources(moonlight PRIVATE ./src/video/zwp-relative-pointer.c ./src/video/zwp-pointer-constraints.c ./src/video/wlr-output-management.c ./src/video/wp-viewporter.c ./src/video/xdg-shell-client-protocol.c ./src/video/wayland.c)
+    target_sources(moonlight PRIVATE ./src/video/wp-presentation-time.c ./src/video/wp-representation.c ./src/video/wp-colormanagement.c ./src/video/wp-linuxdmabuf.c ./src/video/zwp-relative-pointer.c ./src/video/zwp-pointer-constraints.c ./src/video/wlr-output-management.c ./src/video/wp-viewporter.c ./src/video/xdg-shell-client-protocol.c ./src/video/wayland.c)
     target_include_directories(moonlight PRIVATE ${WAYLAND_CLIENT_INCLUDE_DIRS} ${WAYLAND_EGL_INCLUDE_DIRS})
     target_link_libraries(moonlight ${WAYLAND_CLIENT_LIBRARIES} ${WAYLAND_EGL_LIBRARIES})
   endif()
-  if((X11_FOUND) OR (WAYLAND_CLIENT_FOUND AND WAYLAND_EGL_FOUND) OR (GBM_FOUND))
+  if((X11_FOUND) OR (WAYLAND_CLIENT_FOUND AND WAYLAND_EGL_FOUND) OR (DRM_FOUND))
     target_sources(moonlight PRIVATE ./src/video/pc.c ./src/video/egl.c)
     target_include_directories(moonlight PRIVATE ${EGL_INCLUDE_DIRS} ${GLES_INCLUDE_DIRS})
     target_link_libraries(moonlight ${EGL_LIBRARIES} ${GLES_LIBRARIES})
@@ -250,7 +289,7 @@ if (PULSE_FOUND)
   target_link_libraries(moonlight ${PULSE_LIBRARIES})
 endif()
 
-if (AMLOGIC_FOUND OR BROADCOM-OMX_FOUND OR MMAL_FOUND OR FREESCALE_FOUND OR ROCKCHIP_FOUND OR X11_FOUND)
+if (AMLOGIC_FOUND OR BROADCOM-OMX_FOUND OR MMAL_FOUND OR FREESCALE_FOUND OR ROCKCHIP_FOUND OR X11_FOUND OR WAYLAND_FOUND OR DRM_FOUND)
   list(APPEND MOONLIGHT_DEFINITIONS HAVE_EMBEDDED)
   list(APPEND MOONLIGHT_OPTIONS EMBEDDED)
 endif()
