--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
-project(moonlight-embedded VERSION 2.7.6 LANGUAGES C)
+project(moonlight-embedded VERSION 2.7.7 LANGUAGES C)
 SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
 SET(CMAKE_C_STANDARD 99)
 include(${CMAKE_ROOT}/Modules/GNUInstallDirs.cmake)
@@ -136,7 +136,7 @@ if (CEC_FOUND)
   list(APPEND MOONLIGHT_DEFINITIONS HAVE_LIBCEC)
   list(APPEND MOONLIGHT_OPTIONS CEC)
   target_sources(moonlight PRIVATE ./src/input/cec.c)
-  target_include_directories(moonlight PRIVATE ./third_party/libcec ${CEC_INCLUDE_DIRS})
+  target_include_directories(moonlight PRIVATE ${CEC_INCLUDE_DIRS})
   target_link_libraries(moonlight ${CEC_LIBRARIES})
 endif()
 
